# lc3sim

./: Cargo.toml  README.md  mutex_queue
.github/: dependabot.yml
.github/workflows/: all-tests.yml  cargo-tag.yml  clippy.yml  pages.yml
benches/: executor_compare.rs
coverage/: index.html
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html
docs/anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/heck/: all.html  index.html  struct.AsKebabCase.html  struct.AsLowerCamelCase.html  struct.AsPascalCase.html  struct.AsShoutyKebabCase.html  struct.AsShoutySnakeCase.html  struct.AsShoutySnekCase.html  struct.AsSnakeCase.html  struct.AsSnekCase.html  struct.AsTitleCase.html  struct.AsTrainCase.html  struct.AsUpperCamelCase.html  trait.ToKebabCase.html  trait.ToLowerCamelCase.html  trait.ToPascalCase.html  trait.ToShoutyKebabCase.html  trait.ToShoutySnakeCase.html  trait.ToShoutySnekCase.html  trait.ToSnakeCase.html  trait.ToSnekCase.html  trait.ToTitleCase.html  trait.ToTrainCase.html  trait.ToUpperCamelCase.html
docs/lc3sim/: all.html  fn.main.html  index.html
docs/lc3sim_project/: all.html  index.html  sidebar-items.js
docs/memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
docs/once_cell/: all.html  index.html
docs/proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
docs/quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
docs/syn/: all.html  (+136 more)
penn_sim/: README.md
src/: assembler.rs  byte_conv.rs  defs.rs  instruction.rs  lib.rs  testcli.rs  util.rs
tests/: core_unca.rs
(+1121 files in other folders)
