[package]
name = "lc3sim"
version = "0.1.1"
rust-version = "1.80"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lc3sim_project"
path = "src/lib.rs"

[[bin]]
name = "lc3sim"
path = "src/cli.rs"

[dependencies]
# To reduce error boilerplate
thiserror = "2"

[dev-dependencies]
# To reduce getter boilerplate
derive-getters = "0.5"
# More efficient map initialization
once_map = "0.4"
# Random tempfile names
uuid = { version = "1", features = ["v4"] }
