[package]
name = "lc3sim"
version = "0.1.1"
rust-version = "1.82"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lc3sim_project"
path = "src/lib.rs"

[[bin]]
name = "lc3sim"
path = "src/cli.rs"

[[bin]]
name = "testcli"
path = "src/testcli.rs"

[dependencies]
anyhow = "1.0.95"
once_cell = "1.20.2"
regex = "1.11.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
# To reduce error boilerplate
thiserror = "2"

[dev-dependencies]
# To reduce getter boilerplate
derive-getters = "0.5"
# More efficient map initialization
once_map = "0.4"
# Reducing test writing boilerplate via macro
paste = "1"
# Random tempfile names
uuid = { version = "1", features = ["v4"] }
